[tool.poetry]
name = "keycloak"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
python-keycloak = "^4.7.0"
pydantic-settings = "^2.6.1"
python-multipart = "^0.0.17"
fastapi-keycloak-middleware = "^1.1.0"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
